feat: implement UI
